Align remaining hkj-core test packages to the canonical layout (#555)
Brings the remaining hkj-core test packages up to the canonical per-type-class
test layout (the reference established by either/maybe/validated in #552)

Scope:
- core types: trymonad, optional, id, lazy, writer, list, reader, state, io, future
- single-use (sweep-only, incompatible with the shared-Kind law helpers): stream, vstream
- vtask: type-class tests aligned
- monad transformers (_t): maybe_t/optional_t/either_t (MonadError trio),
  state_t/reader_t/writer_t (capability trio)
- advanced constructions: coyoneda, constant, trampoline, context, tuple, free_ap,
  free, eitherf